2005-02-10  Nate Nielsen <nielsen@memberwebs.com>

    * HACKING: Added notes and list of non GPGME features we're
    using.
    
2005-02-09  Nate Nielsen <nielsen@memberwebs.com>

    * data/seahorse.schemas.in: 
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-default-key-control.c:
    * libseahorse/seahorse-default-key-control.h:
    * libseahorse/seahorse-key-pair.c:
    * libseahorse/seahorse-key-pair.h:
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-recipients.c:
    * libseahorse/seahorse-recipients.glade:
    * plugins/nautilus/seahorse-gedit.c: 
    * src/main.c: Support for choice of signing key, proper control for 
    signing key selection (Fixes #157333, #111885)
    
2005-02-06  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-source.c: Fixed problem where key 
    list would be truncated when opening a key's properties
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-key-properties.c:
    * libseahorse/seahorse-key-properties.glade: Usability patch 
    from Jim Pharis (bug #166417)
    
2005-02-05  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/seahorse-op.c: 
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-vfs-data.c:
    * libseahorse/seahorse-vfs-data.h: 
    * src/main.c: gnome-vfs work: delay file creation until write.
    cleanup gnome-vfs properly. use gnome-vfs for all file action.
    * libseahorse/seahorse-util.c: Make the 'save and 'open' buttons
    in the file chooser dialogs the default buttons.
    * libseahorse/seahorse-op.c: Fix bug where plain text file was 
    truncated when verified against a signature.
    
2005-02-04  Nate Nielsen <nielsen@memberwebs.com>

    * src/seahorse-keyserver-search.glade: Adam Schreiber
    made entry field run search on Return keypress
    * libseahorse/seahorse-pgp-source.c: