@@ -1,3 +1,12 @@
+2005-02-13  Nate Nielsen <nielsen@memberwebs.com>
+
+    * libseahorse/Makefile.am:
+    * libseahorse/seahorse-libdialogs.h:
+    * plugins/gedit/seahorse-gedit.c:
+    * src/main.c:
+    * src/seahorse-revoke.c: Prompt for signer when no default 
+    key is selected.
+    
 2005-02-10  Nate Nielsen <nielsen@memberwebs.com>
 
     * HACKING: Added notes and list of non GPGME features we're
